objects/CSS_SymptomQA__c.object
<CustomObject>
    <fields>
        <fullName>Answers__c</fullName>
        <description>This field is used to store the selected option/options, in CSV format, for the concerned Guide Question</description>
        <label>Answers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AttributeValues__c</fullName>
        <label>AttributeValues</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Caption__c</fullName>
        <description>this field is used to  store the symptom</description>
        <label>Caption</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guide_Question__c</fullName>
        <description>This field stores the Question, related to a symptom , coming from EDS.</description>
        <label>Guide Question</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Job_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This field is a lookup for Service Job object that stores the Job order number associated with it.</inlineHelpText>
        <label>Service Job</label>
        <referenceTo>CSS_Job_Order__c</referenceTo>
        <relationshipLabel>CSS_SymptomQA</relationshipLabel>
        <relationshipName>CSS_SymptomQA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_Solutions__c</fullName>
        <label>Number_of_Solutions</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Option1__c</fullName>
        <description>This field stores the Answer related to the particular Guide question</description>
        <label>Option1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Option2__c</fullName>
        <description>This field stores the Answer related to the particular Guide question</description>
        <label>Option2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Option3__c</fullName>
        <description>This field stores the Answer related to the particular Guide question</description>
        <label>Option3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Option_type__c</fullName>
        <description>This field tells if the the options selected is of type &quot;Radio&quot; or &quot;Multi-select&quot;.</description>
        <label>Option type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SearchString__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SearchString</label>
        <referenceTo>CSS_SymptomQA__c</referenceTo>
        <relationshipLabel>CSS_SymptomQA</relationshipLabel>
        <relationshipName>CSS_SymptomQA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>CSS_SymptomQA</relationshipLabel>
        <relationshipName>CSS_SymptomQA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <label>User Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isPole__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isPole</label>
        <type>Checkbox</type>
    </fields>
    <label>CSS_SymptomQA</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Answers__c</columns>
        <columns>NAME</columns>
        <columns>Option_type__c</columns>
        <columns>Job_Order__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>CSS_SymptomQ&amp;A Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CSS_SymptomQA</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>